Followup to "rects sent to ServicesOverlayController are wrong" https://bugs.webkit.org/show_bug.cgi?id=134568

Rubberstamped by Tim Horton.

* WebProcess/WebPage/mac/ServicesOverlayController.mm:
(WebKit::ServicesOverlayController::drawSelectionHighlight): Don’t check to see if the
  proposed rect intersects the dirty rect. We always need to include all rects that form
  the selection when creating the DDHighlight.

Canonical link: https://commits.webkit.org/152579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170760 268f45cc-cd09-0410-ab3c-d52691b4dbfc